force-app/main/default/objects/Loading_Ticket_Line__c/Loading_Ticket_Line__c.object-meta.xml
<CustomObject>
    <description>One material line on a loading ticket. Crew scans/checks Loaded__c as items are loaded onto the truck.</description>
    <label>Loading Ticket Line</label>
    <nameField>
        <displayFormat>LTL-{0000}</displayFormat>
        <label>Loading Ticket Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loading Ticket Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>