force-app/main/default/objects/Loading_Ticket_Line__c/fields/Loaded__c.field-meta.xml
<CustomField>
    <fullName>Loaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Loaded</label>
    <type>Checkbox</type>
</CustomField>