force-app/main/default/objects/Loading_Ticket_Line__c/fields/Loading_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Loading_Ticket__c</fullName>
    <label>Loading Ticket</label>
    <referenceTo>Loading_Ticket__c</referenceTo>
    <relationshipLabel>Loading Ticket Lines</relationshipLabel>
    <relationshipName>Loading_Ticket_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>