force-app/main/default/objects/Loading_Ticket_Line__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Loading Ticket Lines</relationshipLabel>
    <relationshipName>Loading_Ticket_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>