force-app/main/default/objects/Loading_Ticket_Line__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <label>Quantity</label>
    <precision>14</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>