force-app/main/default/objects/Loading_Ticket_Line__c/fields/Source_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Source_Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Loading Ticket Lines</relationshipLabel>
    <relationshipName>Loading_Ticket_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>